Added AuthServiceTest, AuthControllerTest